JumpScript/tests/baselines/reference/destructuringTypeAssertionsES5_1.errors.txt
tests/cases/conformance/es6/destructuring/destructuringTypeAssertionsES5_1.jump(1,18): error TS2304: Cannot find name 'foo'.


==== tests/cases/conformance/es6/destructuring/destructuringTypeAssertionsES5_1.jump (1 errors) ====
    var { x } = <any>foo();
                     ~~~
!!! error TS2304: Cannot find name 'foo'.